--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -16,43 +16,17 @@ body {
   overflow-x: hidden;
 }
 
-.landing-page .landing-header {
-  background-color: #2c3e50;
-  color: #ecf0f1;
-  padding: 60px;
-  text-align: center;
-  border-bottom: 5px solid #3498db;
-  position: relative;
-  transition: background-color 0.3s;
-  overflow: hidden;
+.features-overview {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
-.landing-page .landing-header h1,
-.landing-page .landing-header p {
-  position: relative;
-  z-index: 2;
-}
-
-.landing-page .landing-header .hide {
-  display: none;
-}
-
-.landing-page .landing-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(45deg, #3498db, #9b59b6);
-  clip-path: circle(50% at right 50%);
-  transition: clip-path 1s ease-in-out;
-  z-index: 1;
-}
-
-.landing-page .landing-header:hover::before {
-  clip-path: circle(100% at 50% 50%);
+.feature {
+  flex: 1;
+  min-width: 250px;
 }
 
 .landing-page {
@@ -109,15 +83,4 @@ body {
 
 .landing-page .cta-section .cta-button:hover {
   background-color: #27ae60;
-}
-
-.landing-page .landing-footer {
-  background-color: #2c3e50;
-  color: #bdc3c7;
-  text-align: center;
-  padding: 20px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  border-top: 1px solid #7f8c8d;
 }
