--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,38 +1,70 @@
-.header {
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    padding: 60px;
-    text-align: center;
-    border-bottom: 5px solid #3498db;
-    position: relative;
-    transition: background-color 0.3s;
-    overflow: hidden;
-  }
-  
-.header h1,
-.header p {
-    position: relative;
-    z-index: 2;
-  }
-  
-.header .hide {
-    display: none;
-  }
+/* Header.css */
 
-.header::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(45deg, #3498db, #9b59b6);
-    clip-path: circle(50% at right 50%);
-    transition: clip-path 1s ease-in-out;
-    z-index: 1;
-  }
-  
- .header:hover::before {
-    clip-path: circle(100% at 50% 50%);
-  }
+.header {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* Adjust the content spacing */
+  padding: 0 20px;
+  position: relative;
+  padding: 30px;
+  border-bottom: 5px solid #3498db;
+  transition: background-color 0.3s;
+  /* overflow: hidden; */
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 25px;
+  z-index: 3;
+}
+
+.menu-icon div {
+  background-color: #ecf0f1;
+  height: 3px;
+  width: 30px;
+  margin: 2px 0;
+  /* Spacing between the lines */
+}
+
+.header-text {
+  flex-grow: 1;
+  /* Center the text in the remaining space */
+  text-align: center;
+}
+
+.header h1 {
+  margin: 0;
+  padding: 0;
+}
+
+.header .hide {
+  display: none;
+}
+
+.dropdown-content {
+  position: absolute;
+  top: 100%;
+  /* Aligns dropdown right below the header */
+  left: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
