--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -66,3 +66,9 @@ body {
     justify-content: center;
     box-sizing: border-box;
 }
+
+.time-section {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
