--- a/client/src/styles/EventCreate.css
+++ b/client/src/styles/EventCreate.css
@@ -1,4 +1,3 @@
-
 :root {
     --primary-color: #3498db;
     --font-stack: 'Arial', sans-serif;
@@ -11,6 +10,7 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
 }
 
 .container {
