--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -13,7 +13,6 @@ body {
   padding: 0;
   background-color: #f4f4f4;
   color: #333;
-  overflow-x: hidden;
 }
 
 .features-overview {
@@ -22,11 +21,26 @@ body {
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 1rem;
+  flex-direction: column;
 }
 
 .feature {
   flex: 1;
   min-width: 250px;
+}
+
+.landing-page-header {
+  font-size: 35px; 
+  width: 100%;
+  text-align: center; 
+}
+
+.feature h2 {
+  font-size: 30px; 
+}
+
+.feature p {
+  font-size: 20px;
 }
 
 .landing-page {
@@ -38,19 +52,20 @@ body {
 .landing-page .main-content {
   flex-grow: 1;
   background-color: #ecf0f1;
+  padding-bottom: 100px;
 }
 
 .landing-page .features-overview {
   display: flex;
   justify-content: space-around;
-  padding: 40px 20px;
+  padding: 0px 50px 0px 50px;
 }
 
 .landing-page .features-overview .feature {
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
-  width: 30%;
+  width: 98%;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   text-align: center;
   transition: all 0.3s;
