--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -49,7 +49,7 @@ body {
 }
 
 .comment-form {
-    height: 550px;
+    /* height: 550px; */
     max-width: 550px;
     width: 100%;
     margin: 0 auto;
@@ -57,10 +57,10 @@ body {
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%; */
+    /* transform: translate(-50%, -50%); */
     display: flex;
     flex-direction: column;
     justify-content: center;
