--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -3,7 +3,7 @@
   color: #bdc3c7;
   text-align: center;
   padding: 20px;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   width: 100%;
   border-top: 1px solid #7f8c8d;
