--- a/client/src/styles/EventCreate.css
+++ b/client/src/styles/EventCreate.css
@@ -27,10 +27,13 @@ body {
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     box-sizing: border-box;
-}
-
+    max-height: 500px;
+    overflow-y: auto;
+    scroll-padding-top: 40px;
+  }
+  
 .hide {
     display: none;
 }
