--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -49,30 +49,34 @@ body {
 }
 
 .comment-form {
-    /* height: 550px; */
-    max-width: 550px;
+    max-width: 700px;
     width: 100%;
     margin: 0 auto;
     padding: 40px;
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    /* position: absolute;
+    position: absolute;
     top: 50%;
-    left: 50%; */
-    /* transform: translate(-50%, -50%); */
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     box-sizing: border-box;
+    max-height: 500px;
+    overflow-y: auto;
+    scroll-padding-top: 40px;
 }
+
 
 .time-section {
     display: flex;
     flex-direction: row;
     gap: 30px;
 }
+
 /* Overwriting the Easy Edit default styling */
-.easy-edit-not-allowed{
-    cursor: auto!important;
+.easy-edit-not-allowed {
+    cursor: auto !important;
 }
