--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -19,7 +19,7 @@ body {
     max-width: 600px;
     width: 100%;
     margin: 0 auto;
-    padding: 40px;
+    padding: 0;
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -72,9 +72,27 @@ body {
     color: var(--secondary-color);
 }
 
+.title-text {
+    font-weight: bold;
+}
+
 .event-list__item {
     background-color: #f9f9f9;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 2%;
     border-radius: var(--border-radius);
+    display: flex;
+    align-content: start;
+}
+
+.event-info{
+    margin: 1%;
+    flex-grow:3;
+}
+
+.user-role{
+    border-left: 2px solid gray;
+    align-self: center;
+    text-align: center;
+    flex-grow: 3;
 }
