--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -49,18 +49,11 @@ body {
 }
 
 .comment-form {
-    max-width: 700px;
     width: 100%;
-    margin: 0 auto;
+    margin:10px 0;
     padding: 40px;
     background-color: #fff;
     border-radius: 12px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     box-sizing: border-box;
@@ -114,4 +107,17 @@ body {
 
 .guest-list-group button {
     max-height: 20px;
+}
+
+button img{
+    max-height: 10px;
+}
+
+.drowpdown-button{
+    max-height: 10px;
+}
+
+.show-rsvp{
+    display: flex;
+
 }
