--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -95,4 +95,16 @@ body {
     align-self: center;
     text-align: center;
     flex-grow: 3;
+    min-width: 20%;
+}
+.quick-rsvp{
+    display: flex;
+    flex-direction: column;
+}
+.button-group{
+}
+
+img{
+    max-width: 100%;
+    max-height: 20px;
 }
