--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -61,11 +61,11 @@
 
 .signup-button {
   width: 100%;
-  padding: 15px;
+  padding: 25px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 22px;
   box-sizing: border-box;
   text-decoration: none;
   text-align: center;
@@ -75,5 +75,5 @@
 }
 
 .signup-button:hover {
-  background-color: #27ae60;
+  background-color: #08883d;
 }
