--- a/client/src/styles/Contribution.css
+++ b/client/src/styles/Contribution.css
@@ -22,3 +22,20 @@
 .title-bool-group{
     display: flex;
 }
+
+.contrib-input-group{
+
+}
+
+.contribute-btn {
+    width: 10%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 15px;
+    box-sizing: border-box;
+    text-decoration: none;
+    background-color: #2c3e50;
+    color: #fff;
+}
