--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -78,10 +78,36 @@ body {
     display: flex;
 }
 
-.contributions-container{
-    flex-grow: 1;
+.contributions-container {
+    flex-grow: 2;
     margin: 0 2%;
+    width: 300px;
+    margin-top: 20px;
+    /* margin-bottom: 20px; */
+    float: right;
+    margin-left: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    font-family: Arial, sans-serif;
+    color: #333;
+    overflow-y: auto;
+    max-height: 500px;
+}
 
+.rsvp-container{
+    width: 100%;
+    margin:10px 0;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 12px;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    max-height: 500px;
+    overflow-y: auto;
+    scroll-padding-top: 40px;
 }
 
 .left-column{
