--- a/client/src/styles/EventCreate.css
+++ b/client/src/styles/EventCreate.css
@@ -16,6 +16,7 @@ body {
 .container {
     max-width: 700px;
     width: 100%;
+    height: 65%; 
     margin: 0 auto;
     padding: 40px;
     background-color: #fff;
@@ -29,7 +30,7 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     box-sizing: border-box;
-    max-height: 500px;
+    max-height: 800px;
     overflow-y: auto;
     scroll-padding-top: 40px;
   }
