--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -62,7 +62,7 @@
 }
 
 .signin-button,
-.signup-button {
+.signup-button-two {
   width: 100%;
   padding: 15px;
   border: none;
@@ -85,12 +85,13 @@
   background-color: #2980b9;
 }
 
-.signup-button {
+.signup-button-two {
   margin-top: 20px;
   background-color: #2ecc71;
   color: #fff;
+  /* padding: 14px; */
 }
 
-.signup-button:hover {
+.signup-button-two:hover {
   background-color: #27ae60;
 }
