--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -18,15 +18,11 @@ body {
 .dashboard {
     max-width: 600px;
     width: 100%;
-    margin: 0 auto;
+    margin: 2% auto;
     padding: 0;
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
