--- a/client/src/styles/EventCreate.css
+++ b/client/src/styles/EventCreate.css
@@ -17,15 +17,11 @@ body {
     max-width: 700px;
     width: 100%;
     height: 65%; 
-    margin: 0 auto;
+    margin: 2% auto;
     padding: 40px;
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 63.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
