--- a/client/src/styles/CommentForm.css
+++ b/client/src/styles/CommentForm.css
@@ -8,7 +8,6 @@
 }
 
 .delete-btn {
-    width: 10%;
     padding: 10px;
     border: none;
     border-radius: 4px;
@@ -20,10 +19,10 @@
     display: inline-block;
     background-color: #cc462e;
     color: #fff;
+    max-height: 40px;
 }
 
 .edit-btn {
-    width: 10%;
     padding: 10px;
     border: none;
     border-radius: 4px;
@@ -32,7 +31,41 @@
     box-sizing: border-box;
     text-decoration: none;
     text-align: center;
-    display: inline-block;
     background-color: #2437e2;
     color: #fff;
+    max-height: 40px;
+}
+
+.save-btn {
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 17px;
+    box-sizing: border-box;
+    text-decoration: none;
+    text-align: center;
+    background-color:var(--secondary-color);
+    color: #fff;
+    max-height: 40px;
+}
+
+.comment-button-group{
+    display: flex;
+    gap: 10px;
+}
+
+.content-button-group{
+    display: flex;
+}
+
+.comment-content{
+    flex-grow: 4;
+}
+
+.claim-button{
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: 5px;
+    color: white;
 }
