--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -84,6 +84,7 @@ body {
 .event-info{
     margin: 1%;
     flex-grow:3;
+    width:80%
 }
 
 .user-role{
@@ -91,7 +92,7 @@ body {
     align-self: center;
     text-align: center;
     flex-grow: 3;
-    min-width: 20%;
+    width: 20%;
 }
 .quick-rsvp{
     display: flex;
@@ -103,4 +104,20 @@ body {
 img{
     max-width: 100%;
     max-height: 20px; 
+}
+
+#quick-rsvp-no{
+    background-color: #cc462e;
+    border: none;
+    border-radius: 5px;
+    padding: 4px;
+    margin: 2px;
+}
+
+#quick-rsvp-yes{
+    background-color:#2ecc71;
+    border: none;
+    border-radius: 5px;
+    padding: 4px;
+    margin: 2px;
 }
