--- a/client/src/styles/CommentForm.css
+++ b/client/src/styles/CommentForm.css
@@ -7,6 +7,14 @@
     background: white;
 }
 
+.form-control{
+    border: 1px solid #130c0c;
+}
+
+.comment-form{
+    padding: 30px;
+}
+
 .delete-btn {
     padding: 10px;
     border: none;
