--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -186,7 +186,7 @@ button img{
     /* border: 1px solid red; */
 }
 
-input:not(.styling-exclude){
+/* input:not(.styling-exclude){
     font-size: 100%;
     font-family: inherit;
     margin: 0;
@@ -195,7 +195,7 @@ input:not(.styling-exclude){
     line-height: 1;
     border: none;
     outline: none;
-}
+} */
 
 textarea{
     border: none;
