--- a/client/src/styles/EventOverview.css
+++ b/client/src/styles/EventOverview.css
@@ -234,3 +234,15 @@ select{
     padding: 3%;
     color: white;
 }
+
+
+input:not(.styling-exclude){
+    font-size: 100%;
+    font-family: inherit;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: 1;
+    border: none;
+    outline: none;
+    }
