reworked design of homepage, first pass color change

--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
     --primary-color: #3498db;
     --secondary-color: #2ecc71;
     --bg-color: #ecf0f1;
     --font-stack: 'Arial', sans-serif;
     --border-radius: 8px;
     --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+} */
 
 body {
     font-family: var(--font-stack);
@@ -101,7 +101,7 @@ body {
 .button-group{
 }
 
-img{
+.event-list__item img{
     max-width: 100%;
     max-height: 20px; 
 }
