--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -1,133 +1,91 @@
-:root {
-  --primary-color: #3498db;
-  --secondary-color: #2ecc71;
-  --bg-color: #ecf0f1;
-  --font-stack: 'Arial', sans-serif;
-  --border-radius: 8px;
-  --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.landing-page h2{
+  font-weight: 800;
+  margin-block-start: 0;
+  margin-block-end: 0em;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-  color: #333;
+.landing-page h3{
+  margin: 0px;
+  margin-block-start:0;
+  margin-block-end: 0;
+  font-size: 1.1rem;  
+  font-weight: 400;
+}
+
+.landing-page p{
+  margin-block-start:0;
+  margin-block-end: 0;
+  font-weight: 200;
 }
 
 .features-overview {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   flex-wrap: wrap;
   gap: 1rem;
-  flex-direction: column;
-}
-
-.img {
-  max-width: 100%;
-  max-height: 100% ;
-}
-
-.feature {
-  flex: 1;
-  min-width: 250px;
 }
 
 .landing-page-header {
-  font-size: 35px; 
+  font-size: 35px;
   width: 100%;
-  text-align: center; 
+  text-align: center;
 }
 
-.feature h2 {
-  font-size: 30px; 
-}
-
-.feature p {
-  font-size: 20px;
-}
-
-.landing-page {
-   display: flex; 
-   flex-direction: column; 
-  min-height: 100vh;
-}
-
-.landing-page .main-content {
-  flex-grow: 1;
-  background-color: #ecf0f1;
-  padding-bottom: 100px;
+.main-content{
+  display: flex;
+  flex-direction: column;
+  background-color: var(--light-color);
+  justify-content: center;
 }
 
 .landing-page .features-overview {
-   display: flex; 
-  justify-content: space-around; 
-  padding: 0px 50px 0px 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.landing-page .features-overview .feature {
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 35px;
-  width: 70%;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+.feature-card {
+  width: 25rem;
+  height: 20rem;
+  display: block;
+  border: 2px solid var(--dark-accent);
+  border-radius: var(--border-radius);
+  overflow: hidden;
+}
+
+.feature-card img{
+  height: 10rem;
+  aspect-ratio: 1/1;
+  object-fit: cover !important;
+  display: block;
+  margin: auto;
+}
+
+.feature-card .feature-text{
   text-align: center;
-  transition: all 0.3s;
-  justify-content:center ;
+  /* border: 1px solid purple; */
+  padding: 0rem 1rem;
 }
 
-.landing-page .features-overview .feature:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 8px 12px rgba(0,0,0,0.1);
-}
-
-.landing-page .cta-section {
-  background-color: #3498db;
-  color: #fff;
-  text-align: center;
-  padding: 40px 20px;
-  transition: background-color 0.3s;
-}
-
-.landing-page .cta-section .cta-button {
-  background-color: #2ecc71;
-  color: #fff;
-  padding: 15px 30px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 16px;
-  transition: all 0.3s;
-}
-
-.landing-page .cta-section .cta-button:hover {
-  background-color: #27ae60;
-}
-
-.start-button {
-  width: 25%;
-  padding: 25px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 22px;
-  box-sizing: border-box;
-  text-decoration: none;
-  text-align: center;
-  display: inline-block;
-  background-color: #2ecc71;
-  color: #fff;
-}
-
-.start-button:hover {
-  background-color: #2fbd6a;
-}
-
-.landing-icon {
+.start-button{
+  margin: 3% auto;
   
-    max-width: 100%;
-    max-height: 100%; 
+}
 
+@media screen and (max-width: 867px) {
+  .features-overview{
+    gap: 1%;
+    row-gap: 5px;
+  }
+  .feature-card{
+    width: 48%;
+  }
+  
+}
+
+@media screen and (max-width: 425px) {
+  
+  .feature-card{
+    width: 100%;
+  }
+  
 }
