--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,9 +1,12 @@
 :root {
-    --light-color: #F4F4F7;
-    --dark-color: #7B296F;
-    --light-accent: #E4B294;
-    --dark-accent: #329FE6;
-    --color-pop: #EA7B76;
+    --light-color: #FFF;
+    --background-color: #999797;
+    --primary-color: #F65858;
+    --secondary-color:#0D99AA;
+    --dark-header-color: #185369;
+    --danger-color:#AA0D0D;
+    --dark-font-color: #000;
+    --light-font-color: #FFF;
     --font-stack: 'Arial', sans-serif;
     --border-radius: 15px;
     --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -14,18 +17,16 @@
     font-family: 'Heebo', sans-serif;
 }
 
-main {
-    /* border: 1px solid red; */
-    width: 55rem;
-    margin: auto;
+body {
+   margin: 0
 }
 
-.cta-button,
-.cta-button:hover,
-.start-button {
-    background-color: var(--dark-accent);
-    color: var(--light-color);
+main {
+    /* border: 1px solid red; */
+   padding: 0 1rem;
+    /* background-color: var(--background-color); */
 }
+
 
 /* button {
     width: 25%;
@@ -40,18 +41,6 @@ main {
     display: inline-block;
 } */
 
-.start-button {
-    width: 25%;
-    padding: 25px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 22px;
-    box-sizing: border-box;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-}
 
 @media screen and (max-width: 890px){
     main{
