--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -12,8 +12,8 @@
   height: 550px;
   max-width: 700px;
   width: 100%;
-  margin: 0 auto;
-  padding: 40px;
+  /* margin: 0 auto; */
+  /* padding: 40px; */
   background-color: #fff;
   border-radius: 12px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
