--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -23,7 +23,7 @@ body {
 
 main {
     /* border: 1px solid red; */
-   padding: 0 1rem;
+   padding: 0 1rem 1rem 1rem;
     /* background-color: var(--background-color); */
 }
 
