--- a/client/src/styles/Headline.css
+++ b/client/src/styles/Headline.css
@@ -1,34 +1,23 @@
 .headline{
     background-color: var(--light-color);
-    width: 100%;
     display: flex;
     justify-content: space-between;
+    padding: 1% 2%;
+}
+
+.headline h1{
+    color: var(--primary-color);
+    font-size: 3rem;
+    font-weight: 300;
 }
 
 .headline h2{
-    margin-block-start: 0;
-    margin-block-end: 0;
+    color: var(--dark-header-color);
+    text-transform: uppercase;
+    font-size: 1rem;
 }
 
 .headline h3{
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
-.headline h4{
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
-
-
-.event-date-time{
-    color: var(--dark-header-color);
-    text-transform: uppercase;
-}
-
-.event-title{
-    color: var(--primary-color);
-    font-size: 4rem;
     font-weight: 300;
-
+    font-size: 1rem;
 }
-
