--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,6 +3,8 @@
     --background-color: #F0F2F5;
     --primary-color: #F65858;
     --secondary-color:#0D99AA;
+    --tertiary-color:  #185369;
+    --quiet-color: #999797;
     --dark-header-color: #185369;
     --danger-color:#AA0D0D;
     --dark-font-color: #000;
@@ -16,41 +18,63 @@
 * {
     font-family: 'Heebo', sans-serif;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+h1, h2, h3, h4, p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
 
 body {
    margin: 0
 }
 
+body h2{
+    color: var(--dark-header-color);
+}
+
 main {
-    /* border: 1px solid red; */
-   padding: 0 1rem 1rem 1rem;
+   padding: 1rem;
     background-color: var(--background-color);
     display: flex;
 }
 
+.cta-button{
+
+}
+
 .edit-button{
     max-height: 25px;
+    border: var(--secondary-color) 1px solid;
+    border-radius: var(--border-radius);
+    background-color: transparent;
+    color: var(--secondary-color);
+}
+
+.delete-button{
+    max-height: 25px;
+    border: var(--danger-color) 1px solid;
+    border-radius: var(--border-radius);
+    background-color: var(--danger-color);
+    color: var(--light-font-color);
 }
 
 .container{
     background-color: var(--light-color);
     border-radius: var(--border-radius);
     padding: 2%;
+    margin: 1% 0;
 }
 
-
-/* button {
-    width: 25%;
-    padding: 25px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 22px;
-    box-sizing: border-box;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-} */
+.flex-group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1%;
+}
 
 
 @media screen and (max-width: 890px){
