--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -23,7 +23,7 @@ html, body {
     overflow-x: hidden;
 }
 
-h1, h2, h3, h4, p {
+.h3, h1, h2, h3, h4, p {
     margin-block-start: 0;
     margin-block-end: 0;
 }
@@ -43,7 +43,11 @@ main {
 }
 
 .cta-button{
-
+    max-height: 25px;
+    border: var(--secondary-color) 1px solid;
+    border-radius: var(--border-radius);
+    background-color: var(--secondary-color);
+    color: var(--light-font-color);
 }
 
 .edit-button{
@@ -60,6 +64,15 @@ main {
     border-radius: var(--border-radius);
     background-color: var(--danger-color);
     color: var(--light-font-color);
+}
+
+.cancel-button{
+    max-height: 25px;
+    border: var(--danger-color) 1px solid;
+    border-radius: var(--border-radius);
+    background-color: transparent;
+    color: var(--danger-color);
+
 }
 
 .container{
