--- a/client/src/styles/Modal.css
+++ b/client/src/styles/Modal.css
@@ -1,9 +1,9 @@
 .modal{
 position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 33%;
+  transform: translate(-50%, 0);
+  min-width: 33%;
   background-color: var(--light-color);
   border: 2px solid #000;
   overflow: scroll;
@@ -16,4 +16,16 @@ position: absolute;
     justify-content: flex-end;
     gap: 2%;
     padding-top: 2%;
+}
+
+.item-button-group{
+    display: flex;
+    gap: 2%;
+    justify-content: center;
+}
+
+.contrib-modal-button-group{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5%;
 }
