--- a/client/src/styles/EventCreate.css
+++ b/client/src/styles/EventCreate.css
@@ -13,10 +13,9 @@ body {
     overflow-y: scroll;
 }
 
-.container {
+.create-container {
     max-width: 700px;
     width: 100%;
-    height: 65%;
     margin: 2% auto;
     padding: 40px;
     background-color: #fff;
@@ -27,6 +26,12 @@ body {
     justify-content: flex-start;
     box-sizing: border-box;
   }
+
+  /* .full-page{
+    position: relative;
+    height: 100vh;
+
+  } */
   
 .hide {
     display: none;
@@ -35,22 +40,30 @@ body {
 /* Form Styles */
 .form-label {
     font-weight: bold;
+    display: block;
 }
 
 .form-controls {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
+    font-size: 1rem;
+    padding: 5px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
     border-radius: var(--border-radius);
     border: 1px solid #130c0c;
 
 }
 
-.btn {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: var(--border-radius);
-    cursor: pointer;
+.add-guest-email{
+
+}
+
+.add-email-button{
+    font-size: 1rem;
+    padding: 1%;
+}
+
+.create-button{
+    font-size: 1.5rem;
 }
