--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -19,7 +19,8 @@
     font-family: 'Heebo', sans-serif;
 }
 html, body {
-    max-width: 100%;
+    width: 100%;
+   height: 100%;
     overflow-x: hidden;
 }
 
@@ -29,7 +30,8 @@ html, body {
 }
 
 body {
-   margin: 0
+   margin: 0;
+   min-height: 100%;
 }
 
 body h2{
@@ -75,6 +77,15 @@ main {
 
 }
 
+.primary-button{
+    /* max-height: 25px; */
+    border: var(--primary-color) 1px solid;
+    border-radius: var(--border-radius);
+    background-color: var(--primary-color);
+    color: var(--light-color);
+
+}
+
 .secondary-button{
     /* max-height: 25px; */
     border: var(--quiet-color) 1px solid;
@@ -97,6 +108,9 @@ main {
     gap: 1%;
 }
 
+.remove-guest{
+    margin:1%;
+}
 
 @media screen and (max-width: 890px){
     main{
