updated front end for log in and sign up views

--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -33,7 +33,7 @@
 .main-content{
   display: flex;
   flex-direction: column;
-  background-color: var(--light-color);
+  /* background-color: var(--light-color); */
   justify-content: center;
 }
 
