--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -1,32 +1,17 @@
-:root {
-  --primary-color: #3498db;
-  --secondary-color: #2ecc71;
-  --bg-color: #ecf0f1;
-  --font-stack: 'Arial', sans-serif;
-  --border-radius: 8px;
-  --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-
 .signup-container {
-  height: 550px;
+  height: 50%;
   max-width: 700px;
   width: 100%;
-  margin: 0 auto;
-  padding: 40px;
+  margin: auto;
+  padding: 3rem;
   background-color: #fff;
-  border-radius: 12px;
+  border-radius: var(--border-radius);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   justify-content: center;
   box-sizing: border-box;
 }
-
 
 .signup-form .form-group {
   margin-bottom: 20px;
@@ -34,12 +19,11 @@
   box-sizing: border-box;
 }
 
-
 .signup-form .form-label {
   display: block;
   margin-bottom: 8px;
   font-weight: 500;
-  color: #333;
+  color: var(--dark-font-color)
 }
 
 
@@ -47,15 +31,10 @@
   width: 100%;
   padding: 15px;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   font-size: 16px;
   box-sizing: border-box;
   transition: border-color 0.3s ease-in-out;
-}
-
-.signup-form .form-control:focus {
-  border-color: #3498db;
-  outline: none;
 }
 
 
@@ -63,17 +42,16 @@
   width: 100%;
   padding: 25px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   font-size: 22px;
   box-sizing: border-box;
   text-decoration: none;
   text-align: center;
   display: inline-block;
-  background-color: #2ecc71;
-  color: #fff;
 }
 
-.signup-button:hover {
-  background-color: #08883d;
+.password-help{
+  font-style: italic;
+  font-size: .8rem;
+  color: var(--quiet-color);
 }
