--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -62,6 +62,7 @@
     border-radius: var(--border-radius);
     display: flex;
     align-content: start;
+    margin: 2% 0;
 }
 
 .event-info{
@@ -104,3 +105,4 @@
     padding: 4px;
     margin: 2px;
 }
+
