--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -15,9 +15,15 @@
 
 }
 
+
 * {
     font-family: 'Heebo', sans-serif;
 }
+
+html{
+    min-height: 100vh;
+}
+
 html, body {
     width: 100%;
    height: 100%;
@@ -29,9 +35,12 @@ html, body {
     margin-block-end: 0;
 }
 
+
+
 body {
    margin: 0;
    min-height: 100%;
+
 }
 
 body h2{
@@ -110,6 +119,14 @@ main {
 
 .remove-guest{
     margin:1%;
+}
+
+.full-page{
+    min-height: 85vh
+}
+
+.content-padding{
+    padding: 0 15%;
 }
 
 @media screen and (max-width: 890px){
