--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -1,19 +1,23 @@
-.landing-page h2{
+.landing-page h1{
+  color: var(--dark-header-color)
+}
+
+.landing-page h2 {
   font-weight: 800;
   margin-block-start: 0;
   margin-block-end: 0em;
 }
 
-.landing-page h3{
+.landing-page h3 {
   margin: 0px;
-  margin-block-start:0;
+  margin-block-start: 0;
   margin-block-end: 0;
-  font-size: 1.1rem;  
+  font-size: 1.1rem;
   font-weight: 400;
 }
 
-.landing-page p{
-  margin-block-start:0;
+.landing-page p {
+  margin-block-start: 0;
   margin-block-end: 0;
   font-weight: 200;
 }
@@ -21,6 +25,7 @@
 .features-overview {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 1rem;
 }
 
@@ -30,31 +35,35 @@
   text-align: center;
 }
 
-.main-content{
+.main-content {
   display: flex;
   flex-direction: column;
-  /* background-color: var(--light-color); */
-  justify-content: center;
+  align-items: center;
 }
 
 .landing-page .features-overview {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  gap: 5%;
 }
 
 .feature-card {
-  width: 20%;
-min-height: 200px;
-display: block;
+  width: 40%;
+  aspect-ratio: 1/0.4;
+  margin: 2% 0;
+  padding: 0 3%;
+  display: block;
   border: 2px solid var(--dark-font-color);
   border-radius: var(--border-radius);
   overflow: hidden;
-  align-items: center;
-  
+
 }
 
-.feature-card img{
+.feature-card h2 {
+  color: var(--primary-color)
+}
+
+.feature-card img {
   height: 10rem;
   aspect-ratio: 1/1;
   object-fit: cover !important;
@@ -62,32 +71,130 @@ display: block;
   margin: auto;
 }
 
-.feature-card .feature-text{
+.feature-text {
   text-align: center;
-  /* border: 1px solid purple; */
-  padding: 0rem 1rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2%;
 }
 
-.start-button{
-  margin: 3% auto;
+.start-button {
+  font-size: 2rem;
+  padding: 5%;
+  display: block;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 1100px){
+  .feature-text h2{
+    font-size: 1.3rem;
+  }
+  .feature-text h3{
+    font-size: 1rem;
+  }
+  .feature-text p{
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .feature-text h2{
+    font-size: 1.3rem;
+  }
+  .feature-text h3{
+    font-size: 1.1rem;
+  }
+  .feature-text p{
+    font-size: 1rem;
+  }
   
 }
 
-@media screen and (max-width: 867px) {
-  .features-overview{
-    gap: 1%;
-    row-gap: 5px;
+@media screen and (max-width: 760px) {
+  .feature-text h2{
+    font-size: 1.1rem;
+  }
+  .feature-text h3{
+    font-size: 1rem;
+  }
+  .feature-text p{
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 690px) {
+  .feature-text h2{
+    font-size: 1rem;
+  }
+  .feature-text h3{
+    font-size: 0.9rem;
+  }
+  .feature-text p{
+    font-size: 0.7rem;
   }
   .feature-card{
-    width: 48%;
+    padding: 0;
+    width: 45%;
+
   }
-  
 }
 
-@media screen and (max-width: 425px) {
-  
-  .feature-card{
+@media screen and (max-width: 612px) {
+  .feature-text h2{
+    font-size: 0.9rem;
+  }
+  .feature-text h3{
+    font-size: 0.7rem;
+  }
+  .feature-text p{
+    font-size: 0.7rem;
+  }
+} 
+
+@media screen and (max-width: 487px) {
+  .feature-text h2{
+    font-size: 1.5rem;
+  }
+  .feature-text h3{
+    font-size: 1.3rem;
+  }
+  .feature-text p{
+    font-size: 1.1rem;
+  }
+  .feature-card {
     width: 100%;
   }
-  
+}
+
+@media screen and (max-width: 375px) {
+  .feature-text h2{
+    font-size: 1.3rem;
+  }
+  .feature-text h3{
+    font-size: 1.1rem;
+  }
+  .feature-text p{
+    font-size: 1rem;
+  }
+  .feature-card {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .feature-text h2{
+    font-size: 1.2rem;
+  }
+  .feature-text h3{
+    font-size: 1rem;
+  }
+  .feature-text p{
+    font-size: 0.9rem;
+  }
+  .feature-card {
+    width: 100%;
+  }
 }
