--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -12,9 +12,7 @@
     --font-stack: 'Arial', sans-serif;
     --border-radius: 15px;
     --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
 }
-
 
 * {
     font-family: 'Heebo', sans-serif;
@@ -35,12 +33,9 @@ html, body {
     margin-block-end: 0;
 }
 
-
-
 body {
    margin: 0;
    min-height: 100%;
-
 }
 
 body h2{
@@ -49,7 +44,7 @@ body h2{
 
 main {
    padding: 1rem;
-    background-color: var(--background-color);
+    /* background-color: var(--background-color); */
     display: flex;
 }
 
@@ -103,6 +98,7 @@ main {
     color: var(--quiet-color);
 
 }
+
 .container{
     background-color: var(--light-color);
     border-radius: var(--border-radius);
@@ -129,8 +125,20 @@ main {
     padding: 0 15%;
 }
 
+@media screen and (max-width: 990px){
+    .content-padding{
+        padding: 0;
+    }
+}
+
 @media screen and (max-width: 890px){
     main{
         max-width: 95%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .content-padding{
+        padding: 0;
     }
 }
